tests/pass/0143_len_string.ee
fn main() {
    println(len("hello"));
    println(len(""));
}
