tests/fail/0098_len_nothing.ee
fn main() {
    println(len(nothing));
}
